gutenberg column child spacing fix

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -368,9 +368,12 @@ body.customize-support {
 				&:first-child {margin-left:0px;}
 				&:last-child {margin-right:0px;}
 
-				// Fix paragraph spacing
-				p:first-of-type {margin-top:0px;}
-				p:last-of-type {margin-bottom:0px;}
+				// Fix element spacing
+				> * {
+					margin:20px 0px;
+					&:first-child {margin-top:0px;}
+					&:last-child {margin-bottom:0px;}
+				}
 
 				// Mobile column styling
 				@include breakpoint(s) {
